version/0.1/_sources/examples/index.rst.txt
:orphan:

.. _ref_examples:

Examples
========
End-to-end examples show how you can use PyMotorCAD. If PyMotorCAD is installed
on your machine, you can download these examples as Python files or Jupyter
notebooks and run them locally.

.. note::
    Some examples require additional Python packages.


.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    </div>

Basic examples
~~~~~~~~~~~~~~
These examples show you how to use the basic functionality of PyMotorCAD.


.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Motor-CAD E-magnetic example script">

.. only:: html

  .. image:: /examples/basics/images/thumb/sphx_glr_emag_basics_thumb.png
    :alt: Motor-CAD E-magnetic example script

  :ref:`sphx_glr_examples_basics_emag_basics.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Motor-CAD E-magnetic example script</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Motor-CAD Lab model example script">

.. only:: html

  .. image:: /examples/basics/images/thumb/sphx_glr_lab_basics_thumb.png
    :alt: Motor-CAD Lab model example script

  :ref:`sphx_glr_examples_basics_lab_basics.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Motor-CAD Lab model example script</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Motor-CAD thermal example script">

.. only:: html

  .. image:: /examples/basics/images/thumb/sphx_glr_thermal_basics_thumb.png
    :alt: Motor-CAD thermal example script

  :ref:`sphx_glr_examples_basics_thermal_basics.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Motor-CAD thermal example script</div>
    </div>


.. raw:: html

    </div>

Linking examples
~~~~~~~~~~~~~~~~
These examples show how you can link PyMotorCAD to other Ansys products.


.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Motor-CAD Twin Builder export">

.. only:: html

  .. image:: /examples/links/images/thumb/sphx_glr_ece_export_for_twinbuilder_thumb.png
    :alt: Motor-CAD Twin Builder export

  :ref:`sphx_glr_examples_links_ece_export_for_twinbuilder.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Motor-CAD Twin Builder export</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:
   :includehidden:

   /examples/basics/index.rst
   /examples/links/index.rst



.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
